i18n/fr/docusaurus-plugin-content-docs/version-0.5.1/scribe/Modes/Open Bible Stories/p8-1-drafting.mdx
---
id: p8-1-drafting
sidebar_label: Ébauche
title: Ébauche
---

**Étapes pour ébaucher les histoires bibliques ouvertes**

-   Cliquez sur Nouveau projet dans le menu latéral gauche de la page du projet
-   Sélectionnez **OBS** dans le menu déroulant
-   Remplissez toutes les informations requises dans les champs
-   Sélectionnez le projet OBS créé à partir de la page Projets
-   Un volet d'édition s'ouvre
-   Cliquez sur l'icône située dans le coin supérieur droit du volet de l'éditeur pour ajouter la mise en page des ressources de référence
-   Cliquez sur l'icône du sélecteur de ressource sur la nouvelle mise en page
-   Un volet de ressources s'ouvrira, affichant une liste des ressources disponibles
-   Sélectionnez la source de référence appropriée

**Scribe** permet d'accéder à diverses ressources pour référence telles que les histoires bibliques ouvertes, les notes de traduction d'OBS, les questions de traduction d'OBS et la liste des mots de traduction d'OBS.

<video controls src="/assets/obsdraft.mov" width="100%" type="video/mp4"></video>

**Étapes pour télécharger des ressources pour référence**

**STORIES DE BIBLE OUVERT**

-   Sur le volet des ressources, cliquez sur le sélecteur de ressources en haut à droite ou sur **CHARGER UN MODULE** 
-   Les histoires bibliques ouvertes seront sélectionnées par défaut 
-   Dans le volet de droite, sélectionnez l'onglet Ressource
-   Entrez la langue désirée dans la barre de recherche de langue et cliquez sur le bouton **ENREGISTRER LE FILTRE**
-   La ressource de langue sélectionnée apparaîtra ci-dessous
-   Cliquez sur le bouton de téléchargement situé à droite de la ressource sélectionnée 
-   Après un téléchargement réussi, un message va apparaître, confirmant le téléchargement réussi de la ressource
-   L'histoire biblique téléchargée apparaîtra maintenant dans l'onglet **OBS** 
-   Sélectionnez la ressource dans la section OBS en cliquant dessus

La ressource sélectionnée sera affichée dans la mise en page, permettant à l'utilisateur de s'y référer si nécessaire

**Étapes pour télécharger les ressources depuis l'appareil local**

-   Cliquez sur l'onglet **COLLECTION** pour importer des ressources depuis l'appareil local
-   Cliquez sur **Sélectionner un dossier**
-   Sélectionnez le fichier depuis le lecteur local à télécharger
-   Cliquez sur **Upload**
-   Le fichier téléchargé apparaîtra dans l'onglet OBS

**Pour télécharger des ressources de référence pour les notes de traduction d'OBS, les questions de traduction d'OBS et les mots de traduction d'OBS**

-   Sélectionnez la source de référence appropriée 
-   Une liste de ressources de référence s'affichera dans le volet de droite
-   Sélectionnez la ressource en survolant la ressource
-   Cliquez sur l'icône **télécharger**<img src="/assets/donldicc.png" width="20px" alt=""/>
-   Après avoir téléchargé la ressource avec succès, un message de notification intitulé "Téléchargement de ressource terminé" apparaîtra en bas à gauche de l'écran
-   La ressource téléchargée apparaît en haut de la liste dans la section téléchargée
