i18n/fr/docusaurus-plugin-content-docs/version-0.8.0/scribe/Modes/Open Bible Stories/p8-1-drafting.mdx
---
id: p8-1-drafting
sidebar_label: Ébauche
title: Ébauche
---

### Étapes pour ébaucher les histoires bibliques ouvertes ###

-   Cliquez sur Nouveau projet dans le menu latéral gauche de la page du projet
-   Sélectionnez **OBS** dans le menu déroulant
-   Remplissez toutes les informations requises dans les champs
-   Sélectionnez le projet OBS créé à partir de la page Projets
-   Un volet d'édition s'ouvre
-   Cliquez sur l'icône de la nouvelle mise en page pour charger les ressources de référence
-   Cliquez sur l'icône du sélecteur de ressource sur la nouvelle mise en page
-   Un volet de ressources s'ouvrira, affichant une liste des ressources disponibles
-   Select the appropriate [reference resource](../../Modes/Common%20Functionality/p5-2-resources#stories-bibles-ouvertes-obs)

**Scribe** permet d'accéder à diverses ressources pour référence telles que les histoires bibliques ouvertes, les notes de traduction d'OBS, les questions de traduction d'OBS et la liste des mots de traduction d'OBS.

<video controls src="/0.5.5/en-obsdraft.mov" width="100%" type="video/mp4"></video>

### Comment utiliser l'éditeur OBS

- Ouvrez le projet OBS que vous avez créé.

- Désactivez le haut-parleur pour désactiver la lecture audio.

- Sélectionnez le paragraphe que vous souhaitez saisir ou modifier.

- Cliquez sur la flèche vers le bas dans l'éditeur pour naviguer entre les différents articles.

:::note

**Dans l'éditeur OBS, les utilisateurs peuvent facilement saisir, modifier, copier, coller, annuler et rétablir les modifications de texte.**

:::

**Les utilisateurs peuvent enregistrer l'audio des histoires bibliques ouvertes. Pour commencer, suivez les étapes de la page Enregistrement audio (../../Modes/Open%20Bible%20Stories/p8-1-drafting.mdx).**

<video controls src="/0.8.0/en_obs_editor.mp4" width="100%" type="video/mp4"/>

### Enregistrer l'audio pour les histoires de la Bible ouverte

**Les utilisateurs peuvent enregistrer l'audio des histoires bibliques ouvertes. Pour commencer, suivez les étapes de la barre d'outils [Enregistrement audio](../Oral%20Bible%20Translation/p7-1-audio%20toolbar)
.**

Accédez ici aux raccourcis clavier pour faciliter l'enregistrement audio. [**Raccourcis clavier pour l'enregistrement audio**](../Oral%20Bible%20Translation/p7-1-audio%20toolbar#shortcut-keys-for-audio-recording)

<video controls src="/0.8.0/en_obs_audio.mp4" width="100%" type="video/mp4"/>

### Comment exporter le fichier OBS ?

- Commencez par sélectionner le projet OBS à exporter sur la page du projet.

- Cliquez sur le menu à trois points situé à la fin du nom du projet.

- Dans le menu qui apparaît, choisissez l'option Exporter.

- Une boîte de dialogue s'ouvre pour configurer l'exportation et vous proposer les options suivantes.
**Options d'exportation OBS**

- **Texte seul (fichiers MD)** - Exporte tous les récits sous forme de fichiers texte Markdown (.md) individuels.

- **Complet (Audio + Texte)** - Crée un fichier ZIP contenant tous les fichiers texte et enregistrements audio, y compris les prises multiples.

- **Audio des récits combinés** - Exporte un fichier audio combiné par récit, fusionnant tous les enregistrements en une seule piste pour chaque récit.

- **Audio + Texte par défaut** - Exporte la prise audio par défaut sélectionnée avec les fichiers texte.

Cliquez sur l'option et choisissez le dossier où exporter le fichier.

<video controls src="/0.8.0/en_obs-export.mp4" width="100%" type="video/mp4"/>

### Étapes pour télécharger des ressources pour référence ###

**STORIES DE BIBLE OUVERT**
(Disponible uniquement en téléchargement)

-   Sur le volet des ressources, cliquez sur le sélecteur de ressources en haut à droite ou sur **CHARGER UN MODULE** 
-   Les histoires bibliques ouvertes seront sélectionnées par défaut 
-   Dans le volet de droite, sélectionnez l'onglet Ressource
-   Entrez la langue désirée dans la barre de recherche de langue et cliquez sur le bouton **ENREGISTRER LE FILTRE**
-   La ressource de langue sélectionnée apparaîtra ci-dessous
-   Cliquez sur le bouton de téléchargement situé à droite de la ressource sélectionnée 
-   Après un téléchargement réussi, un message va apparaître, confirmant le téléchargement réussi de la ressource
-   L'histoire biblique téléchargée apparaîtra maintenant dans l'onglet **OBS** 
-   Sélectionnez la [ressource de référence](../../Modes/Common%20Functionality/p5-2-resources#stories-bibles-ouvertes-obs) appropriée

La ressource sélectionnée sera affichée dans la mise en page, permettant à l'utilisateur de s'y référer si nécessaire

### Étapes pour télécharger les ressources depuis l'appareil local via l'onglet COLLECTION ###

:::note

**Le dossier validé Scripture Burrito est requis pour télécharger des ressources.** 
[Comment créer un dossier Scripture Burrito?](../../How-to/p9-1-scripture%20burrito)

:::
-   Cliquez sur l'onglet **COLLECTION** pour importer des ressources depuis l'appareil local
-   Cliquez sur **Sélectionner un dossier**
-   Sélectionnez le fichier depuis le lecteur local à télécharger
-   Cliquez sur **Upload**
-   Le fichier téléchargé apparaîtra dans l'onglet **OBS**

**Pour télécharger des ressources de référence pour les notes de traduction d'OBS, les questions de traduction d'OBS et les mots de traduction d'OBS**.

-   Sélectionnez la source de référence appropriée 
-   Une liste de ressources de référence s'affichera dans le volet de droite
-   Sélectionnez la ressource en survolant la ressource
-   Cliquez sur l'icône **télécharger**<img src="/assets/donldicc.png" width="20px" alt=""/>
-   Après avoir téléchargé la ressource avec succès, un message de notification intitulé "Téléchargement de ressource terminé" apparaîtra en bas à gauche de l'écran
-   La ressource téléchargée apparaît en haut de la liste dans la section téléchargée
